[gd_scene load_steps=6 format=3 uid="uid://bc6fanleo40m4"]

[ext_resource type="Script" path="res://Scenes/Bullets/bullet_F.gd" id="1_xxxhj"]
[ext_resource type="Texture2D" uid="uid://4xktcjrscy7h" path="res://Sprites/Bullets/bullet_E.png" id="2_qpfn5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8b5a4"]
size = Vector2(3.91198, 34)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ef357"]
size = Vector2(33, 11)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nn444"]
size = Vector2(34, 15.5)

[node name="Bullet_E" type="Area2D"]
collision_layer = 4
collision_mask = 0
script = ExtResource("1_xxxhj")

[node name="BulletE" type="Sprite2D" parent="."]
position = Vector2(1.19209e-07, -5)
scale = Vector2(0.0965, 0.0965)
texture = ExtResource("2_qpfn5")

[node name="WallCallision" type="CollisionShape2D" parent="."]
position = Vector2(-2.10404e-05, -2.04401)
rotation = 1.57033
shape = SubResource("RectangleShape2D_8b5a4")
disabled = true

[node name="Spikes" type="Area2D" parent="."]
position = Vector2(-1, -3)
collision_layer = 0
collision_mask = 2

[node name="SpikeCollision" type="CollisionShape2D" parent="Spikes"]
position = Vector2(1.5, -6.5)
shape = SubResource("RectangleShape2D_ef357")
disabled = true

[node name="TimerDOT" type="Timer" parent="."]
autostart = true

[node name="AreaOfWall" type="Area2D" parent="."]
position = Vector2(-0.0710697, -2.088)
collision_layer = 0
collision_mask = 0

[node name="CollisionShapeOfWall" type="CollisionShape2D" parent="AreaOfWall"]
unique_name_in_owner = true
position = Vector2(0.0710697, -5.162)
shape = SubResource("RectangleShape2D_nn444")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="TimerDOT" to="." method="_on_timer_dot_timeout"]
